src/index.css
@font-face {
  font-family: "inter";
  src: url("../src/assets/fonts/Inter_Regular.ttf") format("truetype");
  font-family: "prompt";
  src: url("../src/assets/fonts/Prompt_Regular.ttf") format("truetype");
}

@import "tailwindcss";

@theme {
  --font-prompt: "prompt", sans-serif;
  --font-inter: "inter", sans-serif;
  --color-ellWhite: #F7F7F7;
  --color-ellBlack: #333333;
  --color-ellGray: #D6D6D6;
  --color-ellRed: #FF1E00;
  --color-ellGreen: #50D890;
  --color-ellLime: #CDF3DE;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.pl-6 {
  padding-left: calc(var(--spacing) * 6) /* 1.5rem = 24px */;
}

.pr-6 {
  padding-right: calc(var(--spacing) * 6) /* 1.5rem = 24px */;
}

.pt-2 {
  padding-top: calc(var(--spacing) * 2) /* 0.5rem = 8px */;
}

.mt-4\.5 {
  margin-top: calc(var(--spacing) * 4.5) /* 1.125rem = 18px */;
}

